--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "livekit-client": "^2.15.16",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
