feat(meeting): add canvas (no streaming canvas yet)

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/fabric": "^5.3.10",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fabric": "^6.9.0",
     "livekit-client": "^2.15.16",
     "lucide-react": "^0.511.0",
     "next": "latest",
@@ -40,6 +42,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8",
