--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
     "@livekit/components-react": "^2.9.16",
     "@livekit/components-styles": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.3.1",
