--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.1.13",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/fabric": "^5.3.10",
